src/App.css
@font-face {
  font-family: 'Valorant';
  src: url(./Assets/Fonts/ValorantFont.ttf);
}

/* EventCard common componant css */

.EventCards {
  background: rgba(21, 21, 36, 0.35);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(7.9px);
  -webkit-backdrop-filter: blur(7.9px);
  border-radius: 7%;
  border: 1px solid rgb(156, 75, 255);
}

.EventCards > .MuiPaper-root {
  border-radius: 7%;
}

.Componants {
  margin: 5%;
}

/* EventCard common componant css Ends here. */

.App {
  text-align: center;
}

.navBar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  justify-items: flex-start;
}

.AppBar {
  background: rgba( 255, 255, 255, 0 ) !important;
  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
  backdrop-filter: blur( 3px );
  -webkit-backdrop-filter: blur( 3px );
  border-bottom-left-radius: 7px;
  border-bottom-right-radius: 7px;
  border: 1px solid rgba( 255, 255, 255, 0.18 );
}

.mianBody {
  background: url('./Assets/Images/bg.svg');
  background-size: 100%;
  background-attachment: fixed;
  padding-left: 5%;

}

.specLogo {
  max-width: 13%;
  margin:auto 40% auto 4%; 
}

.AnimatedLogo {
  margin: 5% auto auto auto;
}

.OptionBox {
  width: 5%;
}

.home {
  height: 100%; 
  width: 100vw;
  font-family: 'Valorant';
  color: #fff;
  display: flex !important;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  align-items: center;
}

.Welcome {
  display: flex;
  flex-direction:column;
}

.LogoAnimation {
  display: 'flex';
  flex-direction: 'row';
  justify-items: 'flex-start'
}

.CountDownContainer {
  width: 100vw;
  font-family: Valorant;
  color: #fff;
  display: flex !important;
  flex-direction: row;
  justify-content: space-around;
  align-content: center;
  align-items: center
}

.EventStartsText {
  display: flex !important;
  flex-direction:column;
}

.CountDownDiv {
  display: flex;
  flex-direction: row;
  margin-left: 20%;
  justify-items: flex-start;
}

.About{
  width: 100vw;
  font-family: Valorant;
  color: #fff;
  display: flex;
  margin: 0 0 0 8%;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.AboutUsHeading {
  position: relative;
  margin-bottom: 8%;
}

.AboutUsbg p {
  font-size: 10em;
  z-index: initial;
  opacity: 0.5;
  margin: 0;
  text-shadow: 0 0 5px #ff0000;
}

.AboutUsText {
  margin-left: 5%;
}

.AboutUsContant {
  display: flex;
  flex-direction: row;
  margin-bottom: 8%;
}

.AboutusCard {
  background: rgba( 17, 18, 35, 0.25 ) !important;
  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
  backdrop-filter: blur( 2.5px );
  -webkit-backdrop-filter: blur( 2.5px );
  border-radius: 15px;
  border: 1px solid rgba( 255, 255, 255, 0.18 );
  min-width: 275;
  align-items: center;
  color: #fff;
}

.AboutUsIllustration {
  height: auto;
  width: 100%;
  margin: 0 0 0 0;
}

.CardText{
  margin: 5% 10%;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.AboutUsVector {
  display: flex ;
  flex-direction: row;
  margin-left: 13%;
  justify-items: flex-start;
}

.EventsContainer {
  width: 100vw;
  font-family: Valorant;
  color: #fff;
  display: flex !important;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.EventsHeading {
  position: relative;
  margin-bottom: 8%;
}

.Eventsbg p {
  font-size: 10em;
  z-index: initial;
  opacity: 0.5;
  margin: 0;
  text-shadow: 0 0 5px #ff0000;
}

.timeDots {
  color: #fff;
}

.EventsCards {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.EventsCardsDiv {
  display: flex;
  flex-direction: column;
}

.expired-notice {
  text-align: center;
  padding: 2rem;
  border: 1px solid #ebebeb;
  border-radius: 0.25rem;
  margin: 0.5rem;
}

.expired-notice > span {
  font-size: 2.5rem;
  font-weight: bold;
  color: red;
}

.expired-notice > p {
  font-size: 1.5rem;
}

.show-counter {
  padding: 0.5rem;
}

.show-counter .countdown-link {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.75rem;
  padding: 0.5rem;
  border: 1px solid #ebebeb;
  border-radius: 0.25rem;
  text-decoration: none;
  color: #000;
}

.show-counter .countdown {
  line-height: 1.25rem;
  padding: 0 0.75rem 0 0.75rem;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.show-counter .countdown.danger {
  color: #ff0000;
}

.show-counter .countdown > p {
  margin: 0;
}

.show-counter .countdown > span {
  text-transform: uppercase;
  font-size: 0.75rem;
  line-height: 1rem;
}


@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

